--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/editarblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/editarblog.cshtml
@@ -78,7 +78,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
+                                    <textarea required class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
                                               title="Contenido descriptivo del blog">@Model.editBlog.content</textarea>
                                     <small class="form-text text-muted">Contenido descriptivo del blog</small>
                                 </div>
