--- a/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
@@ -144,6 +144,12 @@
                                                 <i class="mdi mdi-star text-warning"></i>
                                             </td>
                                         }
+                                        else
+                                        {
+                                            <td class="text-center">
+                                                Sin valorar
+                                            </td>
+                                        }
                                         <td class="text-center"><a href="#"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
                                     </tr>
                                     }
