--- a/WebApplication1/Areas/coadmin/Views/contratos/archivados.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/archivados.cshtml
@@ -69,8 +69,10 @@
                                         <th class="f-b">Nombre de contrato</th>
                                         <th class="f-b">Fecha de contrato</th>
                                         <th class="f-b">Fecha de notificación</th>
+                                        <th class="f-b">Estado</th>
                                         <th class="f-b text-center">Archivo</th>
                                         <th class="f-b">Descripción</th>
+                                        <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -81,6 +83,17 @@
                                         <td>@item.first_name</td>
                                         <td class="text-center">@Convert.ToDateTime(item.date_contract).ToString("MM/dd/yyyy")</td>
                                         <td class="text-center">@Convert.ToDateTime(item.date_notification).ToString("MM/dd/yyyy")</td>
+                                        <td class="text-center">
+                                            @if (item.status == 1)
+                                            {
+                                                <button onclick="onArchivarC(this)" data-id="@item.id" type="button" class="btn btn-primary waves-effect waves-light btn-sm mb-1">Vigente</button>
+
+                                            }
+                                            else
+                                            {
+                                                <button onclick="onArchivarC(this)" data-id="@item.id" type="button" class="btn btn-warning waves-effect waves-light btn-sm">Archivado</button>
+                                            }
+                                        </td>
                                         <td class="text-center">
                                             @if (item.upload_contract != null)
                                             {
@@ -102,6 +115,21 @@
                                             }
                                         </td>
                                         <td>@item.description.</td>
+                                        <td class="text-center">
+                                            <a href="@Url.Action("editar", "contratos", new { area = "coadmin", contractID = item.id })">
+                                                <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                        data-toggle="tooltip" data-placement="top" title="Editar">
+                                                    <i class="mdi mdi-lead-pencil"></i>
+                                                </button>
+                                            </a>
+
+                                            <button type="button" onclick="onDeleteContract(this)" data-id="@item.id"
+                                                    class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                    data-toggle="tooltip" data-placement="top"
+                                                    title="Eliminar">
+                                                <i class="mdi mdi-delete"></i>
+                                            </button>
+                                        </td>
                                     </tr>
                                     }
                                 </tbody>
