--- a/WebApplication1/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Views/comunicaciones/agregarblog.cshtml
@@ -57,7 +57,7 @@
                             <h5 class="d-inline-block">Nueva entrada</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
+                                <label  maxlength="90" for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="title"
                                            data-toggle="tooltip" title="Título descriptivo del blog"
@@ -65,21 +65,12 @@
                                     @*<small class="form-text text-muted">Título descriptivo del blog</small>*@
                                 </div>
                             </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="author"
-                                           data-toggle="tooltip" title="Autor descriptivo del blog" placeholder="Autor"
-                                           id="example-email-input-2" required />
-                                    <small class="form-text text-muted">Autor descriptivo del blog</small>
-                                </div>
-                            </div>
+                            <div class="form-divider"></div>                         
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
+                                    <textarea required class="form-control" name="content" data-toggle="tooltip" id="tbxContenido"
                                               title="Contenido descriptivo del blog"></textarea>
                                     <small class="form-text text-muted">Contenido descriptivo del blog</small>
                                 </div>
