--- a/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/Shared/_Layout.cshtml
@@ -592,7 +592,7 @@
                                         </li>
                                     }
 
-                                    @if (Model.side_sub_menu == "uso_terminos")
+                                    @if (Model.side_sub_menu == "terminos_privacidad")
                                     {
                                         <li class="active">
                                             <a href="@Url.Action("terminos", "uso", new { area = "webmaster" })" class="active">Términos de uso</a>
