--- a/WebApplication1/Areas/webmaster/Views/titulares/agregarVehiculo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/agregarVehiculo.cshtml
@@ -68,7 +68,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "webmaster", Id = Model.titulo.Id })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -161,7 +161,7 @@
                         <!-- View -->
                         <!-- End View -->
                         <button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button>
-                        <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                        <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "webmaster", Id = Model.titulo.Id })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                     </div>
                     }
                 </div>
@@ -171,7 +171,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listadoVehiculos", "titulares", new { area = "webmaster", Id = Model.titulo.Id })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
