--- a/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
@@ -150,7 +150,15 @@
                                                 Sin valorar
                                             </td>
                                         }
-                                        <td class="text-center"><a href="#"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
+                                       
+                                        <td class="text-center"><a href="#">
+                                            <button type="button" onclick="onDeleteSupplierComment(this)" data-id="@comment.id"
+                                                class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                data-toggle="tooltip" data-placement="top"
+                                                title="Eliminar">
+                                                <i class="mdi mdi-delete"></i>
+                                            </button>
+                                        </td>
                                     </tr>
                                     }
                                 </tbody>
