--- a/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/editarTitulo.cshtml
@@ -66,7 +66,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = Model.titulo.IdUser})"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -132,7 +132,7 @@
 
                                         }
                                     </select>
-                                    <small class="form-text text-muted">Lista de comunidades</small>
+                                    @*<small class="form-text text-muted">Lista de comunidades</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
@@ -360,7 +360,7 @@
                             <!-- End View -->
 
                             <a href="#"><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = Model.titulo.IdUser})"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -369,7 +369,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = Model.titulo.IdUser})"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
