--- a/WebApplication1/Views/cuotas/balance.cshtml
+++ b/WebApplication1/Views/cuotas/balance.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "balance";
-    Page.Title = "Balance Pendiente - Brokolee Software";
+    Page.Title = "Balance pendiente - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,71 +13,84 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Balance Pendiente</h4>
+                            <h4 class="page-title">Balance pendiente</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item active">Balance pendiente</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- end page title end breadcrumb -->
+
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
-        @foreach (var item in Model.feeList)
-        {
-            <div class="row">
+
+        <div class="row">
+            @if (ViewBag.msgError != null)
+            {
                 <div class="col-12">
-                    <div class="card">
-                        @using (Html.BeginForm("MakePayment", "cuotas", FormMethod.Post, new
-                        { 
-                            @class = "search-form",
-                            enctype = "multipart/form-data"
-                        }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <input name="cost" value="@item.cost" type="hidden" />
-                            <input name="taxCharge" value="@item.tax_charge" type="hidden" />
-                            <input name="penalty" value="@item.penalty" type="hidden" />
-                            <div class="card-body">
-                                <h5 class="d-inline-block">Balance</h5>
-                                <div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-form-label col-sm-12">Usted tiene un balance pendiente de: <strong>$@string.Format("{0:0.##}", item.cost)</strong></label>
-                                </div>
-                                <div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-form-label col-sm-12">Cargo impuesto: <strong>$@string.Format("{0:0.##}", item.tax_charge)</strong></label>
-                                </div>
-                                <div class="form-divider"></div>
-                                <div class="form-group row">
-                                    <label class="col-form-label col-sm-12">Penalidad: <strong>$@string.Format("{0:0.##}", item.penalty)</strong></label>
-                                </div>
-                                <button type="submit" class="btn btn-primary waves-effect waves-light">Realizar Pago</button>
-                            </div>
-                        }
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                 </div>
-            </div><!-- end row -->
-        }
+            }
+            <div class="col-12">
+                <div class="card m-b-30">
+                    <div class="card-body">
+                        <div class="row form-material">
+                            <div class="col-md-6">
+                                <h5 class="d-inline-block">Listado</h5>
+                            </div>                           
+                        </div>
+                        <div class="table-responsive">
+                            <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                <thead>
+                                    <tr>
+                                        <th class="f-b">Balance pendiente</th>
+                                        <th class="f-b">Cargo impuesto</th>
+                                        <th class="f-b">Penalidad</th>                                        
+                                        <th class="text-center f-b">Realiza pago</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.feeList)
+                                    {
+                                        <tr>
+                                            <td>@item.cost</td>
+                                            <td>@item.tax_charge</td>
+                                            <td>@item.penalty</td>                                           
+                                            <td class="text-center">                                                 
+                                                <button onclick="#" data-id="@item.id" type="button" class="btn btn-warning waves-effect waves-light btn-sm">Pagar</button>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+        </div><!-- end row -->
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
 
-    </div><!-- container -->
-
+    </div><!-- container -->    
 </div> <!-- Page content Wrapper -->
