--- a/WebApplication1/Views/facilidades/reservas.cshtml
+++ b/WebApplication1/Views/facilidades/reservas.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "reservas";
-    Page.Title = "Status de Reservas - Brokolee Software";
+    Page.Title = "Estado de reservas - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,107 +13,85 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Status de Reservas</h4>
+                            <h4 class="page-title">Estado de reservas</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Status de Reservas</li>
+                            <li class="breadcrumb-item active">Estado de reservas</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
         <!-- end page title end breadcrumb -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card m-b-30">
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" id="example-input1-group2" name="example-input1-group2" class="form-control" placeholder="Buscar reservas...">
-                            <span class="input-group-append">
-                                <button type="button" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
+        <!-- back button -->
+        <div class="row pb-4">
+            <div class="col-md-6">
+                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
-        </div><!--end row-->
+        </div>
+        <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
                         <div class="row form-material">
-                            <div class="col-md-6 mb-1">
+                            <div class="col-md-6">
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
-                            <div class="col-md-6">
-
-                            </div>
-                        </div>
-                        <div class="row form-material mb-4">
-                            <div class="col-md-9 ">
-                                <div class="btn-group mb-1">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-secondary dropdown-toggle waves-effect" data-toggle="dropdown" aria-expanded="false">Mostrar 10 registros<span class="caret"></span> </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">25</a>
-                                            <a class="dropdown-item" href="#">50</a>
-                                            <a class="dropdown-item" href="#">100</a>
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="btn-group mb-1">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-secondary dropdown-toggle waves-effect" data-toggle="dropdown" aria-expanded="false"> Ordenar por Orden alfabético <span class="caret"></span> </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">A - Z</a>
-                                            <a class="dropdown-item" href="#">Z - A</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3"></div>
                         </div>
                         <div class="table-responsive">
-                            <table class="table" id="my-table">
-                                <thead class="header-table">
+                            <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                <thead>
                                     <tr>
                                         <th class="f-b">Fecha de solicitud</th>
                                         <th class="f-b">Nombre</th>
-                                        <th class="f-b col-4">Descripción de la actividad</th>
+                                        <th class="f-b">Descripción</th>
                                         <th class="f-b">Hora inicio</th>
                                         <th class="f-b">Hora fin</th>
                                         <th class="f-b">Intervalo</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Estado</th>
                                         <th class="f-b">Factura</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model.efacList)
                                     {
-                                    <tr>
-                                        <td>@Convert.ToDateTime(item.created_at).ToString("MM/dd/yyyy")</td>
-                                        <td>@item.first_name</td>
-                                        <td>@item.description .</td>
-                                        <td class="text-center">@DateTime.Today.Add(item.start_time).ToString("hh:mm tt")</td>
-                                        <td class="text-center">@DateTime.Today.Add(item.end_time).ToString("hh:mm tt")</td>
-                                        <td class="text-center">@item.interval hours</td>
-                                        @if (item.status == 1)
-                                        {
-                                            <td class="text-center"><button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Pendiente</button></td>
-                                        }
-                                        else if(item.status == 2)
-                                        {
-                                            <td class="text-center"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mb-1">Aprobado</button></td>
-                                        } else {
-                                            <td class="text-center"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1">Rechazado</button></td>
-                                        }
+                                        <tr>
+                                            <td>@Convert.ToDateTime(item.created_at).ToString("MM/dd/yyyy")</td>
+                                            <td>@item.first_name</td>
+                                            <td>@item.description .</td>
+                                            <td class="text-center">@DateTime.Today.Add(item.start_time).ToString("hh:mm tt")</td>
+                                            <td class="text-center">@DateTime.Today.Add(item.end_time).ToString("hh:mm tt")</td>
+                                            <td class="text-center">@item.interval hours</td>
+                                            @if (item.status == 1)
+                                            {
+                                                <td class="text-center"><button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Pendiente</button></td>
+                                            }
+                                            else if (item.status == 2)
+                                            {
+                                                <td class="text-center"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mb-1">Aprobado</button></td>
+                                            }
+                                            else
+                                            {
+                                                <td class="text-center"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1">Rechazado</button></td>
+                                            }
                                             <td class="text-center">
-                                                @if (item.upload_regulation != null && 
+                                                @if (item.upload_regulation != null &&
                                                     (item.status == 2 || item.status == 1))
                                                 {
                                                     <a href="~/Upload/Regulation/@item.upload_regulation">
@@ -125,28 +103,18 @@
                                                 else
                                                 {
                                                     @*<a href="">
-                                                        <button type="button" class="btn btn-info waves-effect waves-light btn-sm">
-                                                            <i class="mdi mdi-cloud-download  m-r-5"></i> Descargar
-                                                        </button>
-                                                    </a>*@
+                            <button type="button" class="btn btn-info waves-effect waves-light btn-sm">
+                                <i class="mdi mdi-cloud-download  m-r-5"></i> Descargar
+                            </button>
+                        </a>*@
                                                 }
                                             </td>
-                                    </tr>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
-                        <div class="form-divider"></div>
-                        <div class="row form-material">
-                            <div class="btn-group m-b-10 m-auto">
-                                <button type="button" class="btn btn-secondary mr-1"><i class="mdi mdi-chevron-double-left"></i> Anterior</button>
-                                <button type="button" class="btn btn-primary">1</button>
-                                <button type="button" class="btn btn-secondary">2</button>
-                                <button type="button" class="btn btn-secondary">3</button>
-                                <button type="button" class="btn btn-secondary">4</button>
-                                <button type="button" class="btn btn-secondary ml-1">Siguiente <i class="mdi mdi-chevron-double-right"></i></button>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -154,11 +122,10 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
 
     </div><!-- container -->
-
 </div> <!-- Page content Wrapper -->
