--- a/WebApplication1/Areas/webmaster/Views/paquetes/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/paquetes/listado.cshtml
@@ -51,6 +51,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -83,20 +94,20 @@
                                             <td class="text-center"><a href="http://@item.suscribe_link" target="_blank">http://@item.suscribe_link</a></td>
                                             <td class="text-center">
                                                 @*<a href="@Url.Action("ver", "paquetes", new { area = "webmaster", viewID = item.id })">
-                                                    <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1" 
-                                                            data-toggle="tooltip" data-placement="top" title="Ver">
-                                                    <i class="mdi mdi-eye"></i></button>
-                                                </a>*@
+                                                <button type="button" class="btn btn-success waves-effect waves-light btn-sm mr-1 mb-1"
+                                                        data-toggle="tooltip" data-placement="top" title="Ver">
+                                                <i class="mdi mdi-eye"></i></button>
+                                            </a>*@
                                                 <a href="@Url.Action("editar", "paquetes", new { area = "webmaster", editID = item.id })">
                                                     <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Editar">
-                                                            <i class="mdi mdi-lead-pencil"></i>
+                                                        <i class="mdi mdi-lead-pencil"></i>
                                                     </button>
                                                 </a>
                                                 <a href="#">
-                                                    <button type="button" onclick="onDeletePackage(this)" data-id="@item.id" class="btn btn-danger waves-effect waves-light btn-sm mb-1" 
+                                                    <button type="button" onclick="onDeletePackage(this)" data-id="@item.id" class="btn btn-danger waves-effect waves-light btn-sm mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Eliminar">
-                                                            <i class="mdi mdi-delete"></i>
+                                                        <i class="mdi mdi-delete"></i>
                                                     </button>
                                                 </a>
                                             </td>
